syntax = "proto3";
option go_package = "./pkg/grpc";
import "google/protobuf/timestamp.proto";

package account;

service AccountService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterUserResponse {
  string user_id = 1;
  google.protobuf.Timestamp registration_date = 2;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string user_id = 1;
  string token = 2;
}

message GetUserInfoRequest {
  string user_id = 1;
}

message GetUserInfoResponse {
  string username = 1;
  string email = 2;
  google.protobuf.Timestamp registration_date = 3;
}

